enumcapsulate/tests/derive-tests/as_variant_mut/fail/enum/tuple_variants/multiple_fields.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/as_variant_mut/fail/enum/tuple_variants/multiple_fields.rs:5:10
  |
5 | #[derive(AsVariantMut)]
  |          ^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with single-element tuple variants can use this derive")
